--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "multer": "^1.4.1",
+    "mysql": "^2.17.1",
+    "mysql2": "^2.1.0",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.42.0"
